fix mobile alignment of functions, hash message before signing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -117,7 +117,6 @@ input
 @media (max-width: 500px) {
 
   .container{
-      /*width:90%;*/
       display:flex ;
       flex-flow:row wrap;
       align-content: space-between;
@@ -128,6 +127,11 @@ input
       min-width: 90%;
       max-width: 90%;
   }
+
+  #functionsDiv {
+      float:left ;
+  }
+
   #githubTitle {
       display: none;
   }
